crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__add_var_with_spaces_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "x + 2\n"
---
(BeginTopLevelDecls
    (*
        HintExpr
        Ident=>LowerIdent@0
        InlineBinOpPlus=>OpPlus@1
        Num=>IntBase10@2
    EndBinOpPlus)
EndTopLevelDecls)

[=== canfmt below ===]
BinOp(Ident("x"), Plus, IntBase10("2"))

[=== formatted below ===]

