crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__add_with_spaces_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "1  +   2\n"
---
(BeginFile
    (BeginTopLevelDecls
        (* HintExpr Num=>Int@0 InlineBinOpPlus=>OpPlus@1 Num=>Int@2 EndBinOpPlus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(IntBase10("1"), Plus, IntBase10("2"))

[=== formatted below ===]

