crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__annotated_tag_destructure_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "UserId x : [ UserId I64 ]\nUserId x = UserId 42\n\nx\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        ((*
                BeginTypeOrTypeAlias
                UpperIdent=>UpperIdent@0
                InlineApply=>UpperIdent@0
                Ident=>LowerIdent@1
            EndApply)
            InlineTypeColon=>OpColon@2
            (BeginTypeTagUnion Tag=>UpperIdent@4 TypeName=>UpperIdent@5 EndTypeTagUnion)
        EndTypeOrTypeAlias)
        ((*
                BeginAssign
                UpperIdent=>UpperIdent@7
                InlineApply=>UpperIdent@7
                Ident=>LowerIdent@8
            EndApply)
            InlineAssign=>OpAssign@9
            (* UpperIdent=>UpperIdent@10 InlineApply=>UpperIdent@10 Num=>Int@11 EndApply)
        EndAssign)
        HintExpr
        Ident=>LowerIdent@12
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(Apply(UpperIdent("UserId"), [Ident("x")]), TagUnion([Name("UserId"), Name("I64")]))
Assign(Apply(UpperIdent("UserId"), [Ident("x")]), Apply(UpperIdent("UserId"), [IntBase10("42")]))
Ident("x")

[=== formatted below ===]

