crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__apply.snap
---
source: crates/compiler/parse/src/cypress.rs
description: abc def
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Ident=>LowerIdent@0
            InlineApply=>LowerIdent@0
            Ident=>LowerIdent@1
        EndApply)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Apply(Ident("abc"), [Ident("def")])

[=== formatted below ===]

